--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -224,6 +224,7 @@
 5.configure.edmcrosswalk.conf.oaicat=El archivo de propiedades de Oai para copiar al directorio de trabajo para añadir el EDMCrosswalk, "#?#" o introduzca uno nuevo:
 5.configure.edmcrosswalk.conf.ok=La configuración del EDMCrosswalk terminó correctamente. Recuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\n oaicat.properties al directorio de configuración de dspace\n #?# al directorio WEB-INF/lib donde se haya desplegado el módulo oai de dspace.
 5.configure.edmcrosswalk.conf.nok=Error configurando el EDMCrosswalk
+5.confOaiCatProperties.exist=Ya existe en el archivo "oaicat.properties" una propiedad "Crosswalks.edm" con valor: #?#. Nuestro valor debe ser: #?#
 
 
 6=Comenzando el paso 6: Configurar EDMCrosswalk mediante xsl
