Explicar un poco los tipos en EDMCrosswalk

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -213,7 +213,7 @@
 5.configure.edmcrosswalk.conf.begin=Beginning the configuration of the "#?#" to customize some parameters
 5.configure.edmcrosswalk.conf.edmrights=Url for the element edm.rights:
 5.configure.edmcrosswalk.conf.edmrights.new=There is a value for edm.rights: "#?#", replace it with "#?#" (y/[n])?
-5.configure.edmcrosswalk.conf.edmtypes.exist=Actually exist the next types configured with their values:
+5.configure.edmcrosswalk.conf.edmtypes.exist=Actually exist the next types configured with their values (these ones will be look for when visualized and they'll be replaced by the type):
 5.configure.edmcrosswalk.conf.edmtypes.type:Type #?#:
 5.configure.edmcrosswalk.conf.edmtypes.type.update=Which type do you want to change (press intro to finish)?
 5.configure.edmcrosswalk.conf.edmtypes.type.value.update=Values for types "#?#" separated by commas, actually: #?#
