--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -213,7 +213,7 @@
 5.configure.edmcrosswalk.conf.begin=Comenzando la configuración de "#?#" para parametrizarlo.
 5.configure.edmcrosswalk.conf.edmrights=Url para el elemento edm.rights:
 5.configure.edmcrosswalk.conf.edmrights.new=Ya existe un valor para edm.rights: "#?#", ¿reemplazarlo con "#?#" (y/[n])?
-5.configure.edmcrosswalk.conf.edmtypes.exist=Actualmente existen los siguientes tipos para edm.types con los valores:
+5.configure.edmcrosswalk.conf.edmtypes.exist=Actualmente existen los siguientes tipos para edm.types con los valores (estos se buscarán al mostrar y sustituirán por el tipo):
 5.configure.edmcrosswalk.conf.edmtypes.type:Tipo #?#:
 5.configure.edmcrosswalk.conf.edmtypes.type.update=¿Qué tipo quiere modificar (presione intro para terminar)?
 5.configure.edmcrosswalk.conf.edmtypes.type.value.update=Valores para los tipos "#?#" separados por comas, actualmente: #?#
