Cambiar web.xml del directorio de askosi

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -83,6 +83,9 @@
 1.copyAskosiWebApp.askosiwebappdestdir.new=The extracted files needed from askosiWebapp.zip are going to be copied to or give new path:
 1.copyAskosiWebApp.ok=Askosi Web App extracted and copied ok
 1.copyAskosiWebApp.fail=Askosi Web App extracted and copied failed
+1.copyAskosiWebApp.nowebxml=File #?# does not exist or is not writable to add the Askosi data dir path
+
+1.changeWebXml.noSKOSdirectory=There is no context param "SKOSdirectory" in file #?#
 
 1.copyAskosiPlugJspui.dir=Directory where Jspui is deployed (e.g.: #?#/webapps/jspui):
 1.copyAskosiPlugJspui.ok=Askosi Plugin for Jspui extracted and copied ok
