--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -83,6 +83,10 @@
 1.copyAskosiWebApp.askosiwebappdestdir.new=Los archivos extraídos de askosiWebapp.zip se copiarán en la ruta a introducir:
 1.copyAskosiWebApp.ok=La aplicación web Askosi se extrajo y copió correctamente
 1.copyAskosiWebApp.fail=La aplicación web Askosi se extrajo y copió incorrectamente
+1.copyAskosiWebApp.nowebxml=No existe o no tiene permisos de escritura el archivo: #?# para cambiar la ruta del \
+  directorio de datos de Askosi
+
+1.changeWebXml.noSKOSdirectory=No existe el parámetro "SKOSdirectory" en el archivo #?#
 
 1.copyAskosiPlugJspui.dir=Directorio donde está desplegado el jspui (e.g.: #?#/webapps/jspui):
 1.copyAskosiPlugJspui.ok=El plugin de Askosi para jspui se extrajo y copió correctamente
