Localizar la pregunta del monosílabo y/n

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -29,6 +29,8 @@
 0.step.fillitems=7
 0.step.exit=8
 
+0.answer.yes=y
+
 0.authentication=Dspace User authentication
 0.email.user=Email of the dspace user:
 0.password.user=Password of the dspace user:
