--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -17,7 +17,7 @@
 
 0.step.fail=Paso no correcto
 
-0.proceed=¿Proceder ([y]/n)?
+0.proceed=¿Proceder ([s]/n)?
 0.option.step=Escoja paso:
 
 0.step.askosi=1
@@ -28,6 +28,8 @@
 0.step.edmcrosswalkxsl=6
 0.step.fillitems=7
 0.step.exit=8
+
+0.answer.yes=s
 
 0.authentication=Autenticación de usuario de Dspace
 0.email.user=Email de usuario en dspace:
@@ -68,7 +70,7 @@
 1.copyJarsShared.dir.copyjars=Lo archivos jar para Askosi se copiarán en: #?#
 1.copyJarsShared.dirnew.copyjars=Lo archivos jar para Askosi se copiarán en la ruta a introducir:
 
-1.copyPackageFile.fileexists=El archivo #?# ya existe. ¿Quiere reemplazarlo (y/[n])?
+1.copyPackageFile.fileexists=El archivo #?# ya existe. ¿Quiere reemplazarlo (s/[n])?
 1.copyPackageFile.copyfile=Archivo #?# copiado a #?#
 1.copyPackageFile.orverwritingfile=Reemplazando archivo
 1.copyDatabaseDrivers.dir.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán a la nueva ruta: #?#
@@ -94,7 +96,7 @@
 
 1.copyAskosiDataDir=Introduzca la ruta del directorio de datos de Askosi para su creación:
 1.copyAskosiDataDir.ok=Creación del directorio de datos de Askosi correcta
-1.copyAskosiDataDir.notexist=El directorio #?# no existe, ¿desea crearlo ([y]/n)?
+1.copyAskosiDataDir.notexist=El directorio #?# no existe, ¿desea crearlo ([s]/n)?
 1.copyAskosiDataDir.failcreate=No se pudo crear el directorio: #?#
 1.copyAskosiDataDir.fail=Creación del directorio de datos de Askosi incorrecta
 
@@ -124,18 +126,18 @@
 2.configureInputFormsDspace.notauth=No hay elementos de autoridad creados en la base de datos y asociados a una colección\n por lo que no se puede modificar el archivo input-forms.xml. Ir al paso 3.
 
 2.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-2.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+2.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 
 2.readInputFormsDspace.element.page=¿A qué página el elemento "#?#" del formulario "#?#" debe ir en el archivo input-forms?
 2.readInputFormsDspace.element.form=¿A qué colecciones el elemento "#?#" del vocabulario "#?#" debe ir en el archivo input-forms (introduzca sus handles o/y default para todas las colecciones separados por comas)?
 
-2.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" oor nuevo vocabulario "#?#" (y/[n])?
+2.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" oor nuevo vocabulario "#?#" (s/[n])?
 
 2.addFieldForm.label=Etiqueta para el elemento: #?#
 2.addFieldForm.hint=Ayuda para el elemento: #?#
 
 2.configureDspaceCfg.dspacecfg.add=Creando nueva archivo dspace.cfg en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-2.configureDspaceCfg.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+2.configureDspaceCfg.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 2.configureDspaceCfg.askosidatadir=Directorio de datos de Askosi: #?#
 2.configureDspaceCfg.element.incorrect=El elemento #?# no está correctamente configurado. se añadirá uno correcto. Borre el incorrecto.
 2.configureDspaceCfg.element.add.fail=El elemento #?# no se pudo añadir.
@@ -169,7 +171,7 @@
 3.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
 3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades o controlado por ellas. Ir al paso 2.
 3.createElementAuth.element.notexist=El elemento #?# no existe.
-3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([y]/n)?
+3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([s]/n)?
 
 3.fillAuthItems.getitems=Obtener los ítems de la colección: #?#
 3.fillAuthItems.additem=Crear ítem con valor: #?#
@@ -194,7 +196,7 @@
 4.checkEDMExporWar.newwar=Introduzca la ruta del archivo war o intro para terminar.
 
 4.configure.edmexport.add=Creando nuevo EDMExport.war en #?#.
-4.configure.edmexport.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+4.configure.edmexport.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 4.configure.notwebxml=No existe el archivo "WEB-INF/web.xml" en el archivo war
 4.configure.nopath=No existe el elemento <param-name>dspace-config</param-name>
 4.configure.dspacecfg=Archivo de configuración de Dspace "#?#" o introduzca la ruta correcta:
@@ -212,11 +214,11 @@
 5.checkOaiApiJar.newjar=Introduzca la ruta del archivo con el jar de la api para oai de dspace o intro para terminar.
 
 5.configure.edmcrosswalk.oaiapijar.add=Creando nuevo archivo de oai api jar en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-5.configure.edmcrosswalk.oaiapijar.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
-5.configure.exists.class=Ya existe la clase "#?#" en el archivo jar "#?#". ¿Continuar, se reemplazará el actual (y/[n])?
+5.configure.edmcrosswalk.oaiapijar.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
+5.configure.exists.class=Ya existe la clase "#?#" en el archivo jar "#?#". ¿Continuar, se reemplazará el actual (s/[n])?
 5.configure.edmcrosswalk.conf.begin=Comenzando la configuración de "#?#" para parametrizarlo.
 5.configure.edmcrosswalk.conf.edmrights=Url para el elemento edm.rights:
-5.configure.edmcrosswalk.conf.edmrights.new=Ya existe un valor para edm.rights: "#?#", ¿reemplazarlo con "#?#" (y/[n])?
+5.configure.edmcrosswalk.conf.edmrights.new=Ya existe un valor para edm.rights: "#?#", ¿reemplazarlo con "#?#" (s/[n])?
 5.configure.edmcrosswalk.conf.edmtypes.exist=Actualmente existen los siguientes tipos para edm.types con los valores (estos se buscarán al mostrar y sustituirán por el tipo):
 5.configure.edmcrosswalk.conf.edmtypes.type:Tipo #?#:
 5.configure.edmcrosswalk.conf.edmtypes.type.update=¿Qué tipo quiere modificar (presione intro para terminar)?
@@ -224,7 +226,7 @@
 5.configure.edmcrosswalk.conf.compile=Compilando la nueva clase
 5.configure.edmcrosswalk.conf.updatejar=Actualizando el archivo jar "#?#" con la nueva clase
 5.configure.edmcrosswalk.oaicat.add=Creando nuevo archivo oaicat.properties en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-5.configure.edmcrosswalk.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+5.configure.edmcrosswalk.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 5.configure.edmcrosswalk.conf.oaicat=El archivo de propiedades de Oai para copiar al directorio de trabajo para añadir el EDMCrosswalk, "#?#" o introduzca uno nuevo:
 5.configure.edmcrosswalk.conf.ok=La configuración del EDMCrosswalk terminó correctamente. Recuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\n oaicat.properties al directorio de configuración de dspace\n #?# al directorio WEB-INF/lib donde se haya desplegado el módulo oai de dspace.
 5.configure.edmcrosswalk.conf.nok=Error configurando el EDMCrosswalk
@@ -235,11 +237,11 @@
 6.summary=Se copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo.\nSe copiará el archivo DIM2EDM.xsl al directorio de trabajo.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo.\nSe configurará el archivo DIM2EDM.xsl pidiendo valores para elementos de edm específicos.\nSe modificará el archivo dspace.cfg del directorio de trabajo para aceptar este crosswalk de diseminación.\nSe modificará el archivo del directorio de trabajo oaicat.properties para añadir el edmcrosswalk.
 
 6.configure.dspacecfg.add=Creando nuevo archivo dspace.cfg en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-6.configure.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 6.configure.dim2edm.add=Creando nuevo archivo DIM2EDM.xsl en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-6.configure.dim2edm.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.dim2edm.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 6.configure.oaicat.add=Creando nuevo archivo oaicat.properties en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-6.configure.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 6.configure.dspacedirconf.notexist=Los archivos "#?#" "#?#" no existen o no tienen permisos de lectura o el directorio #?# no tiene permisos de escritura.
 6.configure.ok=La configuración del EDMCrosswalk con xsl terminó correctamente.\nRecuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\nLos archivos dspace.cfg y oaicat.properties al directorio de configuración de dspace\nEl archivo DIM2EDM.xsl al directorio de crosswalks de configuración de dspace
 
