Cambios en mostrar rutas

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -60,20 +60,20 @@
 1.installPackages.title=Beginning copy of jar's needed by Askosi
 1.installPackages.jarok=Jar files copied ok
 1.installPackages.db.title=Beginning copy of database driver
-1.installPackages.deploy.title=Beginning deploy of Askosi Web App
+1.installPackages.deploy.title=Beginning deploy of Askosi Web App\n(it's convenient to deploy at Tomcat webapps dir to don't modify server.xml to add a new context)
 1.installPackages.deploy.plugin.title=Beginning deploy of Askosi Plugin for Jspui
 1.installPackages.datadir.title=Beginning creation of Askosi data directory
 
 1.copyJarsShared.tomcatbasedir.notexist=#?# Tomcat base dir does not exist or is not readable
 1.copyJarsShared.tomcatbaseshareddir.notwritable=#?# Directory is not writable
 1.copyJarsShared.dir.notwritable=#?# Directory does not exist or is not writable
-1.copyJarsShared.dir.copyjars=The jar files needed by Askosi are going to be copied to or give new path: #?#
+1.copyJarsShared.dir.copyjars=The jar files needed by Askosi are going to be copied to or give new path: #?# (Press intro to continue)
 1.copyJarsShared.dirnew.copyjars=The jar files needed by Askosi are going to be copied to new path:
 
 1.copyPackageFile.fileexists=#?# File already exists. Do you want to overwrite it (y/[n])?
 1.copyPackageFile.copyfile=#?# Copied to #?#
 1.copyPackageFile.orverwritingfile=Overwriting file
-1.copyDatabaseDrivers.dir.copyjars=The database jar files needed by Askosi are going to be copied to or give new path: #?#
+1.copyDatabaseDrivers.dir.copyjars=The database jar files needed by Askosi are going to be copied to or give new path: #?# (Press intro to continue)
 1.copyDatabaseDrivers.dirnew.copyjars=The database jar files needed by Askosi are going to be copied to new path:
 1.copyDatabaseDrivers.copy.fail=Copy failed #?#
 1.copyDatabaseDrivers.copy.ok=Database Jar files copied ok
@@ -89,7 +89,7 @@
 
 1.changeWebXml.noSKOSdirectory=There is no context param "SKOSdirectory" in file #?#
 
-1.copyAskosiPlugJspui.dir=Directory where Jspui is deployed (e.g.: #?#/webapps/jspui):
+1.copyAskosiPlugJspui.dir=Directory where Jspui is deployed (e.g.: #?#/webapps/jspui): (Press intro to continue)
 1.copyAskosiPlugJspui.ok=Askosi Plugin for Jspui extracted and copied ok
 1.copyAskosiPlugJspui.fail=Askosi Plugin for Jspui extracted and copied with fails
 
