--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -60,27 +60,27 @@
 1.installPackages.title=Comenzando la copia de los archivos jar requeridos por Askosi
 1.installPackages.jarok=Archivos jar correctamente copiados
 1.installPackages.db.title=Comanzado la copia del driver de la base de datos
-1.installPackages.deploy.title=Comenzando despliegue de la aplicación web Askosi
+1.installPackages.deploy.title=Comenzando despliegue de la aplicación web Askosi\n(es conveniente realizarla en el directorio webapss de Tomcat porque se desplegará automáticamente sin añadir context a server.xml)
 1.installPackages.deploy.plugin.title=Comenzando despliegue del plugin para jspui de Askosi
 1.installPackages.datadir.title=Comenzando la creación del directorio de datos de Askosi
 
 1.copyJarsShared.tomcatbasedir.notexist=El directorio base #?# del servidor de aplicaciones no existe o no se puede leer
 1.copyJarsShared.tomcatbaseshareddir.notwritable=El directorio #?# no tiene permisos de escritura
 1.copyJarsShared.dir.notwritable=El directorio #?# no existe o no tiene permisos de escritura
-1.copyJarsShared.dir.copyjars=Lo archivos jar para Askosi se copiarán en: #?#
+1.copyJarsShared.dir.copyjars=Lo archivos jar para Askosi se copiarán en: #?# (Pulse intro para continuar)
 1.copyJarsShared.dirnew.copyjars=Lo archivos jar para Askosi se copiarán en la ruta a introducir:
 
 1.copyPackageFile.fileexists=El archivo #?# ya existe. ¿Quiere reemplazarlo (s/[n])?
 1.copyPackageFile.copyfile=Archivo #?# copiado a #?#
 1.copyPackageFile.orverwritingfile=Reemplazando archivo
-1.copyDatabaseDrivers.dir.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán a la nueva ruta: #?#
+1.copyDatabaseDrivers.dir.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán a la nueva ruta: #?# (Pulse intro para continuar)
 1.copyDatabaseDrivers.dirnew.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán en la ruta a introducir:
 1.copyDatabaseDrivers.copy.fail=Error en la copia #?#
 1.copyDatabaseDrivers.copy.ok=Archivos jar de la base de datos copiados correctamente
 1.copyDatabaseDrivers.dir.nojar=El directorio no #?# contiene un driver para jdbc
 1.copyDatabaseDrivers.dir.noread=El directorio #?# no existe o tiene permisos de lectura
 
-1.copyAskosiWebApp.askosiwebappdestdir.notexist=El directorio #?# del servidor para webappsno existe  o tiene permisos de lectura
+1.copyAskosiWebApp.askosiwebappdestdir.notexist=El directorio #?# del servidor para webapps no existe o tiene permisos de lectura
 1.copyAskosiWebApp.askosiwebappdestdir=Ruta para copiar los archivos extraídos de askosiWebapp.zip:
 1.copyAskosiWebApp.askosiwebappdestdir.new=Los archivos extraídos de askosiWebapp.zip se copiarán en la ruta a introducir:
 1.copyAskosiWebApp.ok=La aplicación web Askosi se extrajo y copió correctamente
@@ -90,7 +90,7 @@
 
 1.changeWebXml.noSKOSdirectory=No existe el parámetro "SKOSdirectory" en el archivo #?#
 
-1.copyAskosiPlugJspui.dir=Directorio donde está desplegado el jspui (e.g.: #?#/webapps/jspui):
+1.copyAskosiPlugJspui.dir=Directorio donde está desplegado el jspui (e.g.: #?#/webapps/jspui): (Pulse intro para continuar)
 1.copyAskosiPlugJspui.ok=El plugin de Askosi para jspui se extrajo y copió correctamente
 1.copyAskosiPlugJspui.fail=El plugin de Askosi para jspui se extrajo y copió incorrectamente
 
