--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -36,6 +36,8 @@
 0.password.user=Clave del usuario en dspace:
 0.invalid.user=El usuario no es válido.
 
+0.findElementDC=Esquema: #?# , elemento: #?# , calificador: #?#
+
 0.checkAllSkosAuthElements.searching.elements=Buscando elementos de autoridad en #?# colecciones.
 0.checkAllSkosAuthElements.searching.elements.collection=Buscando elementos de autoridad en la colección: #?# con handle #?#
 0.checkAllSkosAuthElements.searching.elements.item=Buscando elementos de autoridad en el item: #?# con handle #?#
@@ -47,7 +49,7 @@
 1=Comenzando paso 1: Instalación de Askosi
 1.summary=Se van a comprobar los archivos dentro del directorio packages del instalador para ver que las firmas y los permisos sean correctos.\nSe copiarán los archivos jar al directorio de las librerías compartidas del servidor de aplicaciones, son necesarios para Askosi.\n\tEjemplos: en Linux Debian: /var/lib/tomcat5.5/shared/lib/; en Linux RedHat: /usr/local/tomcat6/lib/; en OpenBSD: /var/tomcat/shared/lib/\nSe copiará el archivo jar con el driver de la base de datos desde el directorio lib del instalador al directorio de librerías comunes del servidor de aplicaciones.\n\tEjemplos: en Linux Debian: /usr/share/tomcat5.5/common/lib/; en Linux RedHat: /usr/local/tomcat6/lib/; en OpenBSD: /var/tomcat/shared/lib/\nSe copiará y desplegará el archivo askosiWebapp.zip desde packages al directorio de webapps del servidor de aplicaciones.\nSe extraerán las clases del archivo classes.zip en packages al directorio classes donde está desplegado el jspui en dspace, para instalar el plugin de askosi.\nSe extraerán los archivos de exampleAskosiData.zip desde packages al directorio de datos de Askosi.
 
-1.ok=Instalación de Askosi correcta. El servidor de aplicaciones debe ser reiniciado al terminar el instalador
+1.ok=Instalación de Askosi correcta. El servidor de aplicaciones debe ser reiniciado y este instalador después
 1.fail=Error al terminar el paso 1
 
 1.checkPackages.file=Archivo #?#
@@ -113,7 +115,7 @@
 2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 2.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
 2.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\n El archivo input-forms.xml al directorio de configuración de dspace.
-2.configureAll.restart=Se ha modificado el archivo "dspace.cfg" en el directorio de trabajo #?#.\nDebe copiarlo al directorio de configuración de dspace.\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat)
+2.configureAll.restart=Se ha modificado el archivo "dspace.cfg" en el directorio de trabajo #?#.\nDebe copiarlo al directorio de configuración de dspace.\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat) y este instalador después.
 
 2.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
 2.addAuthDCElements.listauth=Listar todas las autoridades
@@ -179,6 +181,7 @@
 3.fillAuthItems.addmetadata=Creando metadatos #?# , idioma: #?# , valor: #?#, authority: #?#
 3.fillAuthItems.item.mismatch=Item #?# con handle #?# no concuerda #?#
 3.fillAuthItems.collection.item.noelement=Colección #?# item #?# no posee element #?# , idioma: #?#
+3.fillAuthItems.numItemsModified=Número de ítems añadidos/modificados para el elemento #?#: #?#
 
 3.askCommunity.handle=Introduzca el handle de la comunidad padre o vacío para crear una nueva:
 3.askCommunity.name=Nombre de la comunidad:
