Cambiar comprobacion de escritura a lectura en el dspace oai api de EDMCrosswalk de java

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -227,7 +227,7 @@
 6.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writeable
 6.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
 
-6.checkOaiApiJar.notexists=#?# jar file does not exist is not a file or is not writeable
+6.checkOaiApiJar.notexists=#?# jar file does not exist is not a file or is not readable
 6.checkOaiApiJar.newjar=Introduce new jar file or intro fo finish.
 
 6.configure.edmcrosswalk.oaiapijar.add=Creating new oai api jar in #?#.\nWhen you have checked the file, replace #?# with this new one.
