--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -227,7 +227,7 @@
 6.checkEdmCrowssWalk.notexists=El archivo de la clase de java #?# no existe o no tiene permisos de escritura
 6.checkEdmCrowssWalk.newclass=Introduzca la ruta del archivo de la clase de java para EDMCrosswalk o intro para terminar.
 
-6.checkOaiApiJar.notexists=El archivo jar #?# no existe o no tiene permisos de escritura
+6.checkOaiApiJar.notexists=El archivo jar #?# no existe o no tiene permisos de lectura
 6.checkOaiApiJar.newjar=Introduzca la ruta del archivo con el jar de la api para oai de dspace o intro para terminar.
 
 6.configure.edmcrosswalk.oaiapijar.add=Creando nuevo archivo de oai api jar en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
