Leer los elementos controlados de autoridad directamente de dspace.cfg Pedir en input-forms el directorio askosi

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -111,6 +111,7 @@
 2=Comenzando paso 2: Configurar Dspace: archivo dspace.cfg
 2.summary=Se ha de instalar Askosi (paso 1) antes de lanzar éste.\nSe copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo del instalador: work.\nSe recogerán todos los elementos de autoridades con sus colecciones.\nSe preguntará si se quieren añadir más elementos como autoridad en dspace.cfg\nSe modificará "dspace.cfg" para añadir el plugin de askosi y su directorio de trabajo.\nPara cada uno de los elementos de autoridades distintos se modificará "dspace.cfg" para añadir un vocabulario.
 
+2.configureAll.listAuth=Lista de elementos con autoridades en la base de datos de dspace:
 2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 2.configureAll.restart=Se ha modificado el archivo "dspace.cfg" en el directorio de trabajo #?#.\nDebe copiarlo al directorio de configuración de dspace.\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat) y este instalador después.
 
@@ -145,8 +146,9 @@
 3.createAuth.noadmin=El usuario #?# no es administrador
 3.createAuth.notschema=No existe el esquema #?#
 3.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
-3.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
-3.createAuth.listauth=Listar todas las autoridades
+3.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades en colecciones / d: listar todas las autoridades en dspace.cfg / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
+3.createAuth.listauth=Listar todas las autoridades en colecciones
+3.createAuth.listauth.dspace=Listar todas las autoridades en dspace.cfg
 3.createAuth.listdc=Listar todos los elementos DC
 3.createAuth.notmetadata=No hay elementos de metadatos
 3.createAuth.notauthdcelements=No hay elementos de autoridades dc. Debe introducir una nueva autoridad.
@@ -157,7 +159,7 @@
 3.createElementAuth.element.notallowed=El elemento "#?#" no está permitido como autoridad.
 3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades o controlado por ellas. Ir al paso 2.
 3.createElementAuth.element.notexist=El elemento #?# no existe.
-3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([s]/n)?
+3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades en idioma #?#.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([s]/n)?
 
 3.fillAuthItems.getitems=Obtener los ítems de la colección: #?#
 3.fillAuthItems.additem=Crear ítem con valor: #?#
@@ -178,9 +180,15 @@
 4=Comenzando el paso 4: Configurar Dspace: input-forms.xml y askosi
 4.summary=Se ha de instalar Askosi (paso 1) antes de lanzar éste.\nSe copiará el archivo "input-forms.xml" al directorio de trabajo.\nPara cada colección se creará un formulario con su elemento para asociarlo al vocabulario.\nSe preguntará a qué formularios y a qué paǵinas de colecciones que no son autoridades, cada vocabulario debe ser añadido.\nSe crearán en el directorio de datos de Askosi, dos archivos para cada vocabulario para conectarse y realizar consultas a la base de datos relacional en la colección asociada al vocabulario.
 
+4.configureAll.listAuth=Lista de elementos con autoridades en la base de datos de dspace:
+4.configureAll.askosiVocabularies=Configurando Askosi para acceder a los ítems de las autoridades de los elementos \
+  relacionados a autoridades.\nSe crearán archivos de configuración de respositorios de Askosi en el directorio de \
+  datos de Askosi\
+  .\nEstos archivos serán de consultas sql a la base de datos de dspace.
 4.configureAll.notauthdcelements=No se procede a configurar el archivo input-forms.xml y el directorio de datos de askosi porque no hay elementos de autoridades dc.
 4.configureAll.inputforms.notexistEl archivo =#?# no existe o no tiene permisos de lectura.
 4.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
+4.configureAll.AskosiDataDir=Escriba la dirección del directorio de datos de Askosi:
 4.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
 4.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo input-forms.xml al directorio de configuración de dspace..\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat) y este instalador después.
 
