--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -110,6 +110,7 @@
 2=Beginning step 2: Configuring Dspace: file dspace.cfg
 2.summary=Askosi must be installed (step 1) before running this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nNew elements will be able to be added if requested.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.
 
+2.configureAll.listAuth=List of elements with authorities on the dspace database:
 2.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 2.configureAll.restart="dspace.cfg" file has been modified in the work directory #?#.\nYou must copy it to the dspace config directory.\nYou must restart  the servlet (e.g. Tomcat) and this installer thereafter
 
@@ -144,8 +145,9 @@
 3.createAuth.noadmin=User #?# is not admin
 3.createAuth.notschema=There is not schema #?#
 3.createAuth.numelements=Number elements in schema #?#:  #?#
-3.createAuth.menu=DC elements as authorities collections (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit)
-3.createAuth.listauth=List all Authorities
+3.createAuth.menu=DC elements as authorities collections (a:list all authorities in collections / d: list all authorities in dspace.cfg / l: list all dc elements / n: enter new authority / x: exit)
+3.createAuth.listauth=List all Authorities in collections
+3.createAuth.listauth.dspace=List all Authorities in dspace.cfg
 3.createAuth.listdc=List all DC elements
 3.createAuth.notmetadata=There are not metatata elements
 3.createAuth.notauthdcelements=There are not auth dc elements. You must enter a new authority.
@@ -156,7 +158,7 @@
 3.createElementAuth.element.nonauthcontrolled="#?#" element is not authority controlled in dspace.cfg. Go to step 2.
 3.createElementAuth.element.notallowed="#?#" element is not allowed to be an authority.
 3.createElementAuth.element.notexist=#?# Element does not exist.
-3.createElementAuth.create=Now Items will be created in this community #?# and collection #?# from the Items of not authorites collections.\nItems will be created with type SKOS_AUTH. Proceed ([y]/n)?
+3.createElementAuth.create=Now Items will be created in this community #?# and collection #?# from the Items of not authorites collections with language #?#.\nItems will be created with type SKOS_AUTH. Proceed ([y]/n)?
 
 3.fillAuthItems.getitems=Getting items from collection: #?#
 3.fillAuthItems.additem=Adding item with value: #?#
@@ -178,10 +180,16 @@
 4=Beginning step 5: Configuring dspace: input-forms.xml and askosi
 4.summary=Askosi must be installed (step 1) before running this one.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
 
+4.configureAll.listAuth=List of elements with authorities on the dspace database:
+4.configureAll.askosiVocabularies=Configuring Askosi to access the authorities items of the elements linked to \
+  authorities\
+  .\nNew \
+  configuration files of Askosi repositories will be created at the Askosi data dir.\nTheir content will be sql queries to dspace database.
 4.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc elements.
 4.configureAll.inputforms.notexist=#?# not exist or is not readable.
 4.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
-4.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
+4.configureAll.AskosiDataDir=Enter the path for the Askosi data dir:
+4.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writable: #?#
 4.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir..\nYou must restart  the servlet (e.g. Tomcat) and this installer thereafter
 
 4.configureInputFormsDspace.notauth=There are not auth elements created in the database and owned by a collection\n so the input-forms.xml file will not be modified. Go to step 3.
@@ -203,7 +211,7 @@
 5=Beginning step 5: Configuring EDMExport with your dspace.cfg
 5.summary=File "EDMExport.war" will be copied from packages dir to the work dir.\nDspace config file path will be asked.\nFile "EDMExport.war" will be modified because inside file "WEB-INF/web.xml" will be modified to change a parameter to add the new path to "dspace.cfg".
 
-5.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writeable
+5.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writable
 5.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
 
 5.replaceDspaceApi.dspaceApi=New dspace api #?#
@@ -224,7 +232,7 @@
 6=Beginning step 6: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
 6.summary=File "EDMCrosswalk.java" will be copied from packages dir to the work dir.\nDspace oai api jar file will be copied from the dir where is deployed or the path will be asked to the work dir.\nValues will be asked for edm specific elements as edm.rights and edm.types.\nFile "EDMCrosswalk,java" will be modified with these new values.\nThis file will be compiled and added to the dspace oai api jar file.\nFile "oaicat.properties" will be copied from dspace config file to the work dir and a property will be added for edm and EDMCrosswalk.
 
-6.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writeable
+6.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writable
 6.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
 
 6.checkOaiApiJar.notexists=#?# jar file does not exist is not a file or is not readable
